# mcp-mvp

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  package-lock.json
api-emulator/: device-api.yaml  device-api.yaml.save  package-lock.json  package.json  server.js
mcp-api/: .dockerignore  Dockerfile  README.md
mcp-frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
mcp-frontend/opcua-bridge/: package-lock.json  package.json
mcp-frontend/src/: App.css  App.test.tsx  App.tsx  ConnectionViewer.test.tsx  ConnectionViewer.tsx
mcp-infra/: README.md  security-groups.tf
mcp-infra/infra/: .gitignore  security_groups.tf  subnets.tf  variables.tf  vpc.tf
mcp-server/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
mcp-server/src/mcp_server/: __init__.py  main.py
mcp-server/src/mcp_server/adapters/: __init__.py  base.py  mqtt.py  rest.py
mcp-server/src/mcp_server/core/: __init__.py  config.py  context_loader.py  registry.py
mcp-server/src/mcp_server/schemas/: __init__.py  models.py
mcp-server/tests/: test_adapters.py  test_api.py  test_registry.py
opcua-bridge/: Dockerfile  bridge-working.js  browse-server.js  index-simple.js  index.js  index.test.js  package-lock.json  package.json  test-bridge.js  test-connection.js
opcua-perlin-demo/: package-lock.json  package.json  start.sh
opcua-perlin-demo/bridge/: index.js
opcua-perlin-demo/frontend/: package-lock.json  package.json
opcua-perlin-demo/server/: index.js  perlin.js
(+2 files in other folders)
